--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div style="float: right;">Total Score - <span id="score">0</span></div>
         </div>
         <div class="frame" id="frame">
-            <h2 class='show-info'>Double Click for Start The Game</h2>
+            <h2 class='show-info'>Click for Start The Game</h2>
         </div> 
     </div>
     <div class="enjoy">Enjoy The Game</div>
